---------------------------------------------------------------------------------------------------
Version: 0.10.4
Date: 28. 01. 2020
  Added:
    - Support for Factorio 0.18.2
  Bugfixes:
    - Fixed signal icons not being drawn at the correct scale
    - Fixed some items were not showing any icon when using Creative Mod mod
    - Minor compatibility fixes to support version 0.5 of Alien Biomes mod
---------------------------------------------------------------------------------------------------
Version: 0.10.3
Date: 28. 01. 2020
  Added:
    - New recipe for upgrading Stone gates to Concrete gates
    - Additional high resolution icons
  Bugfixes:
    - Fixed sprite size issue when playing with Normal resolution sprites (thanks to spandelk)
  Locales:
    - Updated Polish translation (thanks to tomplus)
    - Updated Czech translation (thanks to Treij)
---------------------------------------------------------------------------------------------------
Version: 0.10.2
Date: 25. 01. 2020
  Added:
    - New Stone and Concrete gates along with corresponding Basic and Advanced gates technologies
  Changed:
    - Balancing - Increased research cost of Advanced walls technology
  Bugfixes:
    - Fixed save game migration issue related to new flooring settings
  Locales:
    - Updated Polish translation (thanks to tomplus)
    - Updated Russian translation (thanks to 1avek1)
---------------------------------------------------------------------------------------------------
Version: 0.10.1
Date: 24. 01. 2020
  Changed:
    - Split the 'Enable Floorings' mod setting into two, enabling toggling of wooden and concrete tiles individually
  Bugfixes:
    - Updated icon size logic to better support newer variations of icon specification in 0.18
---------------------------------------------------------------------------------------------------
Version: 0.10.0
Date: 22. 01. 2020
  Added:
    - Support for Factorio 0.18
    - Signal color support for Realistic Ores mod