@@ -1,6 +1,9 @@
 -- entity/decoratives
 
 if DECT.ENABLED["decoratives"] then
+	-- Pull in the base entity sounds
+	local sounds = require("__base__.prototypes.entity.demo-sounds")
+
 	data:extend(
 		{
 			{
@@ -18,7 +21,7 @@ if DECT.ENABLED["decoratives"] then
 				selection_box = {{-0.25, -1.4}, {0.25, 0.16}},
 				repair_sound = {filename = "__base__/sound/manual-repair-simple.ogg"},
 				mined_sound = {filename = "__core__/sound/deconstruct-small.ogg"},
-				vehicle_impact_sound = {filename = "__base__/sound/car-metal-impact.ogg", volume = 0.7},
+				vehicle_impact_sound = sounds.generic_impact,
 				pictures = {
 					{
 						filename = "__Dectorio__/graphics/decoratives/traffic-bollard/traffic-bollard.png",
