@@ -1,9 +1,11 @@
 -- entity/walls
 
 if DECT.ENABLED["walls"] then
+	-- Pull in the base entity sounds
+	local sounds = require("__base__.prototypes.entity.demo-sounds")
+
 	-- Make a copy of the base stone wall before clearing it out
 	local base_stone_wall = data.raw["wall"]["stone-wall"]
-	local sounds = require("__base__.prototypes.entity.demo-sounds")
 	data.raw["wall"]["stone-wall"] = nil
 
 	data:extend(
@@ -24,7 +26,7 @@ if DECT.ENABLED["walls"] then
 				corpse = "wall-remnants",
 				repair_sound = {filename = "__base__/sound/manual-repair-simple.ogg"},
 				mined_sound = {filename = "__base__/sound/deconstruct-bricks.ogg"},
-				vehicle_impact_sound = {filename = "__base__/sound/car-stone-impact.ogg", volume = 1.0},
+				vehicle_impact_sound = sounds.car_stone_impact,
 				connected_gate_visualization = {
 					filename = "__core__/graphics/arrows/underground-lines.png",
 					priority = "high",
@@ -515,7 +517,7 @@ if DECT.ENABLED["walls"] then
 				corpse = "wall-remnants",
 				repair_sound = {filename = "__base__/sound/manual-repair-simple.ogg"},
 				mined_sound = {filename = "__base__/sound/deconstruct-bricks.ogg"},
-				vehicle_impact_sound = {filename = "__base__/sound/car-stone-impact.ogg", volume = 1.0},
+				vehicle_impact_sound = sounds.car_stone_impact,
 				connected_gate_visualization = {
 					filename = "__core__/graphics/arrows/underground-lines.png",
 					priority = "high",
@@ -579,7 +581,7 @@ if DECT.ENABLED["walls"] then
 				corpse = "wall-remnants",
 				repair_sound = {filename = "__base__/sound/manual-repair-simple.ogg"},
 				mined_sound = {filename = "__base__/sound/deconstruct-bricks.ogg"},
-				vehicle_impact_sound = {filename = "__base__/sound/car-stone-impact.ogg", volume = 1.0},
+				vehicle_impact_sound = sounds.generic_impact,
 				connected_gate_visualization = {
 					filename = "__core__/graphics/arrows/underground-lines.png",
 					priority = "high",
@@ -1624,7 +1626,7 @@ if DECT.ENABLED["walls"] then
 						}
 					}
 				},
-				vehicle_impact_sound = sounds.generic_impact,
+				vehicle_impact_sound = sounds.car_stone_impact,
 				open_sound = base_gate.open_sound,
 				close_sound = base_gate.close_sound
 			},
